All first 22 bios (up to Haller) done

--- a/Bios/Haller.html
+++ b/Bios/Haller.html
@@ -61,33 +61,61 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Illustration</li>
+              <li>Editorial Typography & Photography</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+              <li><a href="http://jdhaller.com" target="_blank" class="green-link">http://jdhaller.com</a></li>
+              <li><a href="https://www.instagram.com/jdhaller_/" target="_blank" class="green-link">Instagram: @jdhaller_</a></li>
+              <li><a href="https://twitter.com/jdhaller_" target="_blank" class="green-link">Twitter: @jdhaller_</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li>I am a graduate of Kent State University with a BFA in Visual Communication Design and a minor in Photo Illustration. I also have a BA in Theatre Art, Directing from the University of Northern Colorado. I am currently seeking admission into the School of Visual Communication Design where I hope to complete my MFA so I can pursue a career in design education.</li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Senior quote:</b><br>
+              Artists create until the work is done. Designers create until the message is received. - John Haller</li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+              <li><b>Why did you choose VCD?</b><br>
+              I was at a crossroads in my life that I no longer wanted to linger at. In 2015, I chose to go back to school because I wanted to make a difference in the world, I wanted to dream bigger, and I wanted to be happy.</li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              My mother gave me a box of my artwork that she had been saving my entire life. She presented me with a poster I had created when I was 10 years old for a roller-skating show that I presented in our backyard driveway. At that moment I knew I had to follow a dream that I put away in pursuit of "a real job." Thanks mom.</li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+              <li><b>Favorite keyboard shortcut:</b><br>
+              Option+Delete</li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Worst VCD moment:</b><br>
+              My worst VCD moment will always be ... thinking the ink from the Micron pen is dry then brushing something off the paper and seeing a big black smear. Sadly, this has happened many, many times.</li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
+              <li><b>Best VCD moment:</b><br>
+              Selling my work after exhibiting it in a student show.</li><br>
+
+              <li><b>What inspires you the most?</b><br>
+              At the risk of sounding cliche, I have to say the person who has inspired me the most in my life is my mother. She grew up during the great depression, was dirt poor, stole food to survive, lived in the worst tenements in Chicago, never had a pair of new shoes unit she was married, was a member of a biker gang, and so much more. But above all that, she was a daughter, a sister, a wife and a mother who escaped from the harshness of the world around her by drawing. I simply would not be who I am today, with the gifts that I possess, without her.</li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              In five years, I will be an educator of visual communication design at a university or college.</li><br>
+
+              <li><b>What job would you be terrible at?</b><br>
+              I would be terrible at cutting someones hair.</li><br>
+
+              <li><b>What is your #1 pet peeve?</b><br>
+              Students who say nothing in class. I just don't understand how a designer doesn't have a voice.</li><br>
+
+              <li><b>What song do you have completely memorized?</b><br>
+              "I Dreamed a Dream" from the musical Les Misérables</li><br>
+
+              <li><b>What movie title best describes your life?</b><br>
+              Mixed Nuts</li><br>
+
+              <li><b>What is the luckiest thing that has ever happened to you?</b><br>
+              That I got out of my 30's alive.</li><br>
+
+              <li><b>What’s the best compliment you’ve ever received?</b><br>
+              When I was mistaken for Anthony Edwards from the TV show 'ER' and was sat at a private table in the historic Old Faithful Inn dining room at Yellowstone National Park.</li><br>
             </ul>
 
           </div>
