--- a/Bios/Mapes.html
+++ b/Bios/Mapes.html
@@ -61,33 +61,39 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Illustration</li>
+              <li>A mix of everything!</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+              <li><a href="https://emileemapes.wixsite.com/emileemapesdesigns" target="_blank" class="green-link">https://emileemapes.wixsite.com/emileemapesdesigns</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li>I love anything crafty or art related. My family and pets mean everything to me.</li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Senior quote:</b><br>
+              "I, myself, am strange and unusual." -Lydia Deetz</li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+              <li><b>Why did you choose VCD?</b><br>
+              The ability to use a variety of techniques and skills</li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              The many experiences I will be able to gain</li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+              <li><b>Favorite keyboard shortcut:</b><br>
+              Control+z </li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Best VCD moment:</b><br>
+              Passing sophomore review</li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
+              <li><b>What inspires you the most?</b><br>
+              My family</li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              Have a successful job.</li><br>
+
             </ul>
 
           </div>
