--- a/Bios/Shock.html
+++ b/Bios/Shock.html
@@ -61,33 +61,57 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Illustration</li>
+              <li>Multimedia Design, Illustration, Branding</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+              <li><a href="http://LivShockDesigns.myportfolio.com" target="_blank" class="green-link">http://LivShockDesigns.myportfolio.com</a></li>
+              <li><a href="https://www.instagram.com/LivShockDesigns/" target="_blank" class="green-link">Instagram: @LivShockDesigns</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li>Well, I'm Liv Shock and I am a visual communicator. When people ask what that means I tell them "I make cool stuff." I want to gather experience in multiple fields to challenge myself in the design environment and look forward to what the future has in store.  </li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Senior quote:</b><br>
+              I'm a kind of a "fly by the seat of my pants" type of gal.</li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+              <li><b>Why did you choose VCD?</b><br>
+              I could never see myself doing anything else. </li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              I've always just kind of used art as an outlet growing up. </li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+              <li><b>Favorite keyboard shortcut:</b><br>
+              Shift + command + [ and shift + command + ]</li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Worst VCD moment:</b><br>
+              During a small group critique I had a pretty dope illustration and was really proud of it, but the type was not working. My professor called over the class and said, "Okay, this is exactly what you don't do."</li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
+              <li><b>Best VCD moment:</b><br>
+              Going to Trumbull County to present our "Hope Dealt Here" campaign for the Opioid epidemic and leaving the audience in tears with the final word.</li><br>
+
+              <li><b>What inspires you the most?</b><br>
+              Knowing this is all going to be worth it. </li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              I'd love nothing more than to just be settled and happy wherever I end up. </li><br>
+
+              <li><b>What is your #1 pet peeve?</b><br>
+              When you like an idea you have, but the prof hates it.</li><br>
+
+              <li><b>What song do you have completely memorized?</b><br>
+              Unfortunately, Colt 45</li><br>
+
+              <li><b>What movie title best describes your life?</b><br>
+              Not a movie but for sure shameless </li><br>
+
+              <li><b>What is the luckiest thing that has ever happened to you?</b><br>
+              Pulling an all nighter to finish a project due early in the morning and getting an A on it</li><br>
+
+              <li><b>What’s the best compliment you’ve ever received?</b><br>
+              I don't really know, but I like when people say they're proud of me.</li><br>
             </ul>
 
           </div>
