--- a/Bios/Ober.html
+++ b/Bios/Ober.html
@@ -66,28 +66,48 @@
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+              <li><a href="https://www.instagram.com/lizober/" target="_blank" class="green-link">Instagram: @blizober</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li>I'm the best at being myself. I'm a Cancer but that doesn't really mean anything. I love to work with my hands and have no shame in calling myself crafty.</li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Senior quote:</b><br>
+              This journey has been like a rollercoaster. Full of ups and downs and I cried the whole time.</li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+              <li><b>Why did you choose VCD?</b><br>
+              The program seemed to lead to many opportunities.</li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              I wanted to try something I couldn't do before.</li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+              <li><b>Favorite keyboard shortcut:</b><br>
+              Command+Z</li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Worst VCD moment:</b><br>
+              I printed 20 hand rolled posters on the printing press only to have one letter upside down the whole time. The batch couldn't be used and I had to start all over.</li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
+              <li><b>Best VCD moment:</b><br>
+              The first time I designed something and truly liked what I made.</li><br>
+
+              <li><b>What inspires you the most?</b><br>
+              Coffee</li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              In five years I will be sitting in a home studio painting till sunrise.</li><br>
+
+              <li><b>What job would you be terrible at?</b><br>
+              Writing anything. Words are hard.</li><br>
+
+              <li><b>What song do you have completely memorized?</b><br>
+              Alice's restaurant (the Thanksgiving anthem)</li><br>
+
+              <li><b>What movie title best describes your life?</b><br>
+              Big Fish</li><br>
+
+              <li><b>What is the luckiest thing that has ever happened to you?</b><br>
+              I realized early on in life that the path I was going down was not going to bring me joy, and chose to make a new path for myself. Not many people can see that in their twenties. I count myself lucky that I did.</li><br>
             </ul>
 
           </div>
