--- a/Bios/Stanaitis.html
+++ b/Bios/Stanaitis.html
@@ -61,33 +61,60 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Illustration</li>
+              <li>Illustration, branding and packaging</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+              <li><a href="http://www.kaitlinstanaitis.com" target="_blank" class="green-link">http://www.kaitlinstanaitis.com</a></li>
+              <li><a href="https://www.instagram.com/kaitlin_paints/" target="_blank" class="green-link">Instagram: @kaitlin_paints</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li>I am all around art loving designer who comes from a background in fine arts. I love all things adventure and anything that lets me be creative. </li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Senior quote:</b><br>
+              "No matter where you go, there you are." -Confucius</li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+              <li><b>Why did you choose VCD?</b><br>
+              I wanted to dive into an artistic field that could be used in today's modern society. It allows me to be creative but utilize design skills that are current and relevant. </li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              Paula Scher</li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+              <li><b>Favorite keyboard shortcut:</b><br>
+              Command Option Shift V (paste in place)</li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Worst VCD moment:</b><br>
+              Going to carefully xacto cut the last bit of trim off my project and having the ruler slip resulting in cutting the project in half and having to walk to Fedex and back the day the project was due. Always a fun time!</li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
+              <li><b>Best VCD moment:</b><br>
+              Opening my BFA letter. It made me feel capable and that my art background was a unique skill that was being recognized.</li><br>
+
+              <li><b>What inspires you the most?</b><br>
+              Creating design that can spark social change</li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              I'd love to have my own studio to be able to create/paint/illustrate for myself and others. I want to be able to travel at the drop of a hat and show my friends and family the world.</li><br>
+
+              <li><b>What job would you be terrible at?</b><br>
+              Accounting. I can't sit still for that long looking at numbers. Sorry mom!</li><br>
+
+              <li><b>What is your #1 pet peeve?</b><br>
+              When people take themselves too seriously</li><br>
+
+              <li><b>What song do you have completely memorized?</b><br>
+              thank u, next</li><br>
+
+              <li><b>What movie title best describes your life?</b><br>
+              La La Land</li><br>
+
+              <li><b>What is the luckiest thing that has ever happened to you?</b><br>
+              I found $20 three times in one week... it ended up being the same bill that I just kept misplacing.</li><br>
+
+              <li><b>What’s the best compliment you’ve ever received?</b><br>
+              "Your art is eye opening and has the potential to change something."</li><br>
             </ul>
 
           </div>
