Change Liz's name and adjust grid alphabetically on index and all bio pages

--- a/Bios/Ober.html
+++ b/Bios/Ober.html
@@ -52,12 +52,12 @@
         <div class="bio-grid">
 
           <div class="sidebyside">
-            <img src="../images/students greyscale/Elizabeth Ober.jpg" alt="Elizabeth Ober" id="mobile-bio-photo">
-            <img src="../images/student photostrips/PhotoBooth-Ober.png" alt="Elizabeth Ober" id="desktop-bio-photostrip">
+            <img src="../images/students greyscale/Liz Ober.jpg" alt="Liz Ober" id="mobile-bio-photo">
+            <img src="../images/student photostrips/PhotoBooth-Ober.png" alt="Liz Ober" id="desktop-bio-photostrip">
           </div>
 
           <div class="sidebyside">
-            <h1 class="no-top-padding bold-h1">Elizabeth Ober</h1>
+            <h1 class="no-top-padding bold-h1">Liz Ober</h1>
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
@@ -160,11 +160,6 @@
           </div>
 
           <div class="grid-item">
-            <img src="../images/students/Elizabeth Ober.jpg" alt="Elizabeth Ober">
-            <a href="Ober.html"><div class="overlay"><span>Elizabeth Ober</span></div></a>
-          </div>
-
-          <div class="grid-item">
             <img src="../images/students/Emilee Mapes.jpg" alt="Emilee Mapes">
             <a href="Mapes.html"><div class="overlay"><span>Emilee Mapes</span></div></a>
           </div>
@@ -217,6 +212,11 @@
           <div class="grid-item">
             <img src="../images/students/Kaitlin Stanaitis.jpg" alt="Kaitlin Stanaitis">
             <a href="Stanaitis.html"><div class="overlay"><span>Kaitlin Stanaitis</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="../images/students/Liz Ober.jpg" alt="Liz Ober">
+            <a href="Ober.html"><div class="overlay"><span>Liz Ober</span></div></a>
           </div>
 
           <div class="grid-item">
