--- a/Bios/Sauder.html
+++ b/Bios/Sauder.html
@@ -160,11 +160,6 @@
           </div>
 
           <div class="grid-item">
-            <img src="../images/students/Elizabeth Ober.jpg" alt="Elizabeth Ober">
-            <a href="Ober.html"><div class="overlay"><span>Elizabeth Ober</span></div></a>
-          </div>
-
-          <div class="grid-item">
             <img src="../images/students/Emilee Mapes.jpg" alt="Emilee Mapes">
             <a href="Mapes.html"><div class="overlay"><span>Emilee Mapes</span></div></a>
           </div>
@@ -219,6 +214,10 @@
             <a href="Stanaitis.html"><div class="overlay"><span>Kaitlin Stanaitis</span></div></a>
           </div>
 
+          <div class="grid-item">
+            <img src="../images/students/Liz Ober.jpg" alt="Liz Ober">
+            <a href="Ober.html"><div class="overlay"><span>Liz Ober</span></div></a>
+          </div>
           <div class="grid-item">
             <img src="../images/students/Mackenzie Gerl.jpg" alt="Mackenzie Gerl">
             <a href="Gerl.html"><div class="overlay"><span>Mackenzie Gerl</span></div></a>
