--- a/Bios/Yoon.html
+++ b/Bios/Yoon.html
@@ -140,11 +140,6 @@
           </div>
 
           <div class="grid-item">
-            <img src="../images/students/Elizabeth Ober.jpg" alt="Elizabeth Ober">
-            <a href="Ober.html"><div class="overlay"><span>Elizabeth Ober</span></div></a>
-          </div>
-
-          <div class="grid-item">
             <img src="../images/students/Emilee Mapes.jpg" alt="Emilee Mapes">
             <a href="Mapes.html"><div class="overlay"><span>Emilee Mapes</span></div></a>
           </div>
@@ -197,6 +192,11 @@
           <div class="grid-item">
             <img src="../images/students/Kaitlin Stanaitis.jpg" alt="Kaitlin Stanaitis">
             <a href="Stanaitis.html"><div class="overlay"><span>Kaitlin Stanaitis</span></div></a>
+          </div>
+
+          <div class="grid-item">
+            <img src="../images/students/Liz Ober.jpg" alt="Liz Ober">
+            <a href="Ober.html"><div class="overlay"><span>Liz Ober</span></div></a>
           </div>
 
           <div class="grid-item">
