Reitz and Shirk bios, removed highlights on student grid

--- a/Bios/Reitz.html
+++ b/Bios/Reitz.html
@@ -57,37 +57,58 @@
           </div>
 
           <div class="sidebyside">
-            <h1 class="no-top-padding bold-h1">Austin Reitz</h1>
+            <h1 class="no-top-padding bold-h1">Austin J. Reitz</h1>
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Illustration</li>
+              <li>Illustration, Character Design, Interaction Design, Participatory Design</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+              <li><a href="http://areitz.myportfolio.com" target="_blank" class="green-link">http://areitz.myportfolio.com</a></li>
+              <li><a href="https://www.instagram.com/austinjreitz/" target="_blank" class="green-link">Instagram: @austinjreitz</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li>By nature I am curious. This curiosity has pushed and continues to push me towards pursuits of knowledge and skill, though I constantly gravitate towards illustration and interaction design. Learning is both the spark and the fuel that enables my creative process: once knowledge is acquired, it must be applied in a beneficial manner.</li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Senior quote:</b><br>
+              Design cannot exist in a vacuum; in order for there to be good design, there must be good audiences.</li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+              <li><b>Why did you choose VCD?</b><br>
+              Visual Communication Design is a perfect vehicle for my ever-growing thirst for knowledge and need to create amidst my other academic pursuits, such as studies in French and phonetics.</li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              I have always been captivated by the rationale behind the choices we make as designers. It is often touted that good design is invisible, so becoming a designer allows one to pierce through the veil for a better understanding of the invisible world around us. Design is about the application of this understanding, continually growing, learning, and applying one's learning, and I for one, never intend to stop learning.</li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+              <li><b>Favorite keyboard shortcut:</b><br>
+              In Adobe Illustrator, "E" is my favorite keyboard shortcut because it pulls up the powerful Free Transform tool, which is hidden behind the frustrating Puppet Warp tool.</li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Worst VCD moment:</b><br>
+              My worst VCD moment was walking across town in the rain late in the evening to three different print shops to get a project ready for a 7:45 a.m. class for the next day.</li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
+              <li><b>Best VCD moment:</b><br>
+              My best VCD moment was the wave of relief of passing review and making it into the BFA program.</li><br>
+
+              <li><b>What inspires you the most?</b><br>
+              What inspires me most is the work and passion of my classmates.</li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              In five years time, I plan to either be a character designer for an animation studio or furthering my education through graduate school, as well as have published the first edition of the roleplaying game I constructed for my honors thesis.</li><br>
+
+              <li><b>What is your #1 pet peeve?</b><br>
+              Willful misunderstanding.</li><br>
+
+              <li><b>What song do you have completely memorized?</b><br>
+              Not just one song — but almost the entire discography of famed Canadian alt-rock sensation and recent inductees to the Canadian Music Hall of Fame, Barenaked Ladies. </li><br>
+
+              <li><b>What movie title best describes your life?</b><br>
+              You've Got Mail</li><br>
+
+              <li><b>What’s the best compliment you’ve ever received?</b><br>
+              This is not so much a compliment, but advice. Art Spiegelman, author of Maus, once told me that in order to connect with a narrative, you have to project on it to gain meaning. This advice has been essential to my research in roleplaying games, in which the audience is what gives value to the framework, which I have since applied to all my illustration and design work.</li><br>
             </ul>
 
           </div>
