--- a/Bios/Shirk.html
+++ b/Bios/Shirk.html
@@ -61,33 +61,54 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Illustration</li>
+              <li>Print design & branding</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+              <li><a href="http://gabrielleshirk.com" target="_blank" class="green-link">http://gabrielleshirk.com</a></li>
+              <li><a href="https://www.instagram.com/gabrielleshirk/" target="_blank" class="green-link">Instagram: @gabrielleshirk</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li>My name is Gabrielle (not Gabriella) and I'm a designer from Cleveland. I currently live in Kent with my little Chihuahua, Remi. After college we will be moving back to Cleveland where I hope to work for an in-house agency.</li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Senior quote:</b><br>
+              Dunkin iced coffees were the only thing that got me through VCD #notspon</li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+              <li><b>Why did you choose VCD?</b><br>
+              I wanted to utilize my artistic skills but in a practical way.</li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              An engineering class that I took in high school that taught me about 3D-Design inspired me to look further into designing things. I found myself super intrigued with marketing and advertising practices like packaging and strategies.</li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+              <li><b>Favorite keyboard shortcut:</b><br>
+              Command+Z</li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Worst VCD moment:</b><br>
+              Stressing about internships and being clueless as to how to obtain one</li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
+              <li><b>Best VCD moment:</b><br>
+              Being invited into the BFA program</li><br>
+
+              <li><b>What inspires you the most?</b><br>
+              Simplistic, innovative design</li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              To have another dog and own a home</li><br>
+
+              <li><b>What job would you be terrible at?</b><br>
+              Being an attorney</li><br>
+
+              <li><b>What is your #1 pet peeve?</b><br>
+              When people speak over each other/me</li><br>
+
+              <li><b>What song do you have completely memorized?</b><br>
+              If I Ain't Got You - Alicia Keys</li><br>
+
+              <li><b>What’s the best compliment you’ve ever received?</b><br>
+              That I'm a lot like my parents</li><br>
             </ul>
 
           </div>
