--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
 
           <div class="grid-item">
-            <img class="temporary-disable" src="images/students/Austin Reitz.jpg" alt="Austin Reitz">
+            <img src="images/students/Austin Reitz.jpg" alt="Austin Reitz">
             <a href="./Bios/Reitz.html"><div class="overlay"><span>Austin Reitz</span></div></a>
           </div>
 
@@ -112,17 +112,17 @@
           </div>
 
           <div class="grid-item">
-            <img class="temporary-disable" src="images/students/Freesia Yoon.jpg" alt="Freesia Yoon">
+            <img src="images/students/Freesia Yoon.jpg" alt="Freesia Yoon">
             <a href="./Bios/Yoon.html"><div class="overlay"><span>Freesia Yoon</span></div></a>
           </div>
 
           <div class="grid-item">
-            <img class="temporary-disable" src="images/students/Gabrielle Shirk.jpg" alt="Gabrielle Shirk">
+            <img src="images/students/Gabrielle Shirk.jpg" alt="Gabrielle Shirk">
             <a href="./Bios/Shirk.html"><div class="overlay"><span>Gabrielle Shirk</span></div></a>
           </div>
 
           <div class="grid-item">
-            <img class="temporary-disable" src="images/students/Hanna Kotlarek.jpg" alt="Hanna Kotlarek">
+            <img src="images/students/Hanna Kotlarek.jpg" alt="Hanna Kotlarek">
             <a href="./Bios/Kotlarek.html"><div class="overlay"><span>Hanna Kotlarek</span></div></a>
           </div>
 
