one last disable

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           </div>
 
           <div class="grid-item">
-            <img class="temporary-disable" src="images/students/Shannon Kovach.jpg" alt="Shannon Kovach">
+            <img src="images/students/Shannon Kovach.jpg" alt="Shannon Kovach">
             <a href="./Bios/Kovach.html"><div class="overlay"><span>Shannon Kovach</span></div></a>
           </div>
           <div class="grid-item">
