--- a/Bios/Kovach.html
+++ b/Bios/Kovach.html
@@ -61,33 +61,60 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Illustration</li>
+              <li>Branding, typographic, sequencial illustration</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
             <ul>
-              <li><a href="myportfoliosite.com" class="green-link">myportfoliosite.com</a></li>
-              <li><a href="mailto:export@bfa.com" class="green-link">student@email.com</a></li>
-              <li><a href="https://www.instagram.com/vcdkentstate/" class="green-link">Instagram</a></li>
+              <li><a href="http://shannonkovach.com" target="_blank" class="green-link">http://shannonkovach.com</a></li>
+              <li><a href="https://www.instagram.com/shannonnagins/" target="_blank" class="green-link">Instagram: @shannonnagins</a></li>
             </ul>
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li><b>Bio:</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
-              <li><b>Senior quote:</b> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</li> <br>
-              <li><b>Why did you choose VCD?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li> <br>
+              <li>I'm a visual storyteller and problem solver. I also like podcasts and cats.</li> <br>
 
-              <li><b>What inspired you to be a graphic designer? </b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Senior quote:</b><br>
+              I'm graduating college as one of those people you hear about who's watched The Office more than six times.</li> <br>
 
-              <li><b>Favorite keyboard shortcut:</b> Command + Lorem Ipsum</li><br>
+              <li><b>Why did you choose VCD?</b><br>
+              I chose VCD initially because the work from the illustration classes impressed me.</li> <br>
 
-              <li><b>Worst VCD moment:</b> Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>What inspired you to be a graphic designer?</b><br>
+              I was not initially interested in graphic design, but I really grew to love the challenge typography presented me.</li><br>
 
-              <li><b>Best VCD moment:</b> Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li><br>
+              <li><b>Favorite keyboard shortcut:</b><br>
+              Command+Z</li><br>
 
-              <li><b>What inspires you the most?</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li><br>
+              <li><b>Worst VCD moment:</b><br>
+              Not being prepared for class.</li><br>
 
-              <li><b>Goals in 5 years:</b> Lorem ipsum, dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt, and ut labore et dolore magna aliqua.</li><br>
+              <li><b>Best VCD moment:</b><br>
+              After not being prepared for class, pulling it all together, working hard and succeeding at a project.</li><br>
+
+              <li><b>What inspires you the most?</b><br>
+              My background in history (it was my minor) gives me a great pool to draw from.</li><br>
+
+              <li><b>Goals in 5 years:</b><br>
+              Olympic Gold Medalist in Hula-Hooping</li><br>
+
+              <li><b>What job would you be terrible at?</b><br>
+              Mathematician</li><br>
+
+              <li><b>What is your #1 pet peeve?</b><br>
+              Loud Chewing </li><br>
+
+              <li><b>What song do you have completely memorized?</b><br>
+              Gotta Get Up by Harry Nilsson</li><br>
+
+              <li><b>What movie title best describes your life?</b><br>
+              Being John Malkovich</li><br>
+
+              <li><b>What is the luckiest thing that has ever happened to you?</b><br>
+              A black cat crossed my path on October 31, 2018. </li><br>
+
+              <li><b>What’s the best compliment you’ve ever received?</b><br>
+              "You're Ridiculous"</li><br>
             </ul>
 
           </div>
