--- a/Bios/Kovach.html
+++ b/Bios/Kovach.html
@@ -61,7 +61,7 @@
 
             <h1 class="no-top-padding">Focus</h1>
             <ul>
-              <li>Branding, typographic, sequencial illustration</li>
+              <li>Branding, typographic, sequential illustration</li>
             </ul>
 
             <h1 class="no-top-padding no-bot-padding">Connect</h1>
