Correct Austin J. Reitz's name on all pages, hide Hanna Kotlarek's bio page info for now

--- a/Bios/Allen.html
+++ b/Bios/Allen.html
@@ -130,7 +130,7 @@
 
           <div class="grid-item">
             <img src="../images/students/Austin Reitz.jpg" alt="Austin Reitz">
-            <a href="Reitz.html"><div class="overlay"><span>Austin Reitz</span></div></a>
+            <a href="Reitz.html"><div class="overlay"><span>Austin J. Reitz</span></div></a>
           </div>
 
           <div class="grid-item">
