--- a/Bios/Stanaitis.html
+++ b/Bios/Stanaitis.html
@@ -143,7 +143,7 @@
 
           <div class="grid-item">
             <img src="../images/students/Austin Reitz.jpg" alt="Austin Reitz">
-            <a href="Reitz.html"><div class="overlay"><span>Austin Reitz</span></div></a>
+            <a href="Reitz.html"><div class="overlay"><span>Austin J. Reitz</span></div></a>
           </div>
 
           <div class="grid-item">
@@ -165,7 +165,7 @@
             <img src="../images/students/Carmen Dotterer.jpg" alt="Carmen Dotterer">
             <a href="Dotterer.html"><div class="overlay"><span>Carmen Dotterer</span></div></a>
           </div>
-          
+
           <div class="grid-item">
             <img src="../images/students/Emilee Mapes.jpg" alt="Emilee Mapes">
             <a href="Mapes.html"><div class="overlay"><span>Emilee Mapes</span></div></a>
