--- a/Bios/Datta.html
+++ b/Bios/Datta.html
@@ -87,7 +87,7 @@
               Command+Z</li><br>
 
               <li><b>Worst VCD moment:</b><br>
-              When I first had to start working in Creative Cloud and I did not know how to open a document on Indesign to start working. I needed five people to show me until I could create a page yo work on. </li><br>
+              When I first had to start working in Creative Cloud and I did not know how to open a document on Indesign to start working. I needed five people to show me until I could create a page to work on. </li><br>
 
               <li><b>Best VCD moment:</b><br>
               Getting a scholarship to intern abroad in Prague, Czech Republic. </li><br>
