clickable header image arrow

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
       <div class="bgAnim">
         <i id="command"></i>
       </div>
+      <div>
+        <a href="index.html#grid-anchor"><img src="images/hero image down arrow.svg" alt="Export logo" class="hero-arrow"></a>
+      </div>
     </header>
 
 
@@ -59,7 +62,7 @@
 
     <main class="command-bg">
       <div class="grid-container">
-        <div class="student-grid">
+        <div class="student-grid" id="grid-anchor">
 
           <div class="grid-item">
             <img src="images/students/Alexander Embleton.jpg" alt="Alexander Embleton">
