--- a/about.html
+++ b/about.html
@@ -55,7 +55,13 @@
     <br><br>
     Please join us at Taylor Hall’s second-floor gallery on <b>April 5 at 5pm</b> for the show opening. There will be refreshments, so feel free to stop by and meet the students (we’re really into networking). The show will be open though April 11. For updates please follow us on <a href="https://www.facebook.com/VCDKent/" class="green-link"><b>Facebook</b></a>, <a href="https://www.instagram.com/vcdkentstate/" class="green-link"><b>Instagram</b></a>, or <a href="https://twitter.com/vcdkentstate" class="green-link"><b>Twitter</b></a>.
     </p>
+
+    <h2>Thank you to our sponsors:</h2>
+    <img class="allmedia" src="images/logos/allmedia.jpg"></img>
   </div>
+
+
+
 
 
 </main>
