fix location page

--- a/location.html
+++ b/location.html
@@ -60,7 +60,7 @@
     <h1>Getting Here</h1>
 
     <div class="text-column">
-      <p>The BFA show will be located in the Taylor Hall Gallery at Kent State University. Taylor Hall is located at <strong>300 Midway Dr, Kent, Ohio 44243</strong>. Visitors can park in [PARKING INFO HERE].
+      <p>The BFA show will be located in the Taylor Hall Gallery at Kent State University, located at <strong>300 Midway Dr, Kent, Ohio 44243</strong>.
       </p>
     </div>
 
@@ -125,9 +125,20 @@
 
     <h2>Taylor Hall Gallery</h2>
     <div class="text-column">
-      <p>The Taylor Hall Gallery is located on the second floor of Taylor Hall. The second floor is acccessable through the steps on the exterior of the building or through the first floor entrances. Guests with limited mobility may use the elevator located in the first floor entrance near the May 4 Museum.
+      <p>The Taylor Hall Gallery is located on the second floor of Taylor Hall. The second floor is accessible through the steps on the exterior of the building or through the first floor entrances. Guests with limited mobility may use the elevator located in the first floor entrance near the May 4 Museum.
       </p>
+
+      <div class="two-col">
+        <div>
+          <p><b>Reception</b><br>April 5 at 5PM</p>
+        </div>
+        <div>
+          <p><b>Gallery on Display</b><br>April 8-10, 11AM-5PM</p>
+        </div>
+      </div>
+
       <img src='images/gallery/4N4A2790.jpg' class="margin-top-50"></img>
+
     </div>
 
   </main>
