--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
   <div class="text-column">
     <p>Kent State VCD's Class of 2019 Bachelor of Fine Arts Show is <b>⌘Export</b>. The past four years (give or take for some of us) have provided us with many experiences to learn and grow. Now is the time to go into the professional world and take what we have learned and apply it, effectively — to export.
     <br><br>
-    Please join us at Taylor Hall’s second-floor gallery on <b>April 5 at 5pm</b> for the show opening. There will be refreshments, so feel free to stop by and meet the students (we’re really into networking). The show will be open though April 11. For updates please follow us on <a href="https://www.facebook.com/VCDKent/" class="green-link"><b>Facebook</b></a>, <a href="https://www.instagram.com/vcdkentstate/" class="green-link"><b>Instagram</b></a>, or <a href="https://twitter.com/vcdkentstate" class="green-link"><b>Twitter</b></a>.
+    Please join us at Taylor Hall’s second-floor gallery on <b>April 5 at 5pm</b> for the show opening. There will be refreshments, so feel free to stop by and meet the students (we’re really into networking). The show will be open though April 11. For updates please follow us on <a href="https://www.facebook.com/VCD.BFA.Show/" class="green-link"><b>Facebook</b></a>, <a href="https://www.instagram.com/vcdbfashow/" class="green-link"><b>Instagram</b></a>, or <a href="https://twitter.com/vcdbfashow" class="green-link"><b>Twitter</b></a>.
     </p>
 
     <h2>Thank you to our sponsors:</h2>
@@ -71,9 +71,9 @@
     <div>
 <!-- font awesome icons -->
       <ul class="footer-social-media">
-        <li><a href="https://www.facebook.com/VCDKent/" target="_blank" class="fa fa-facebook"></a></li>
-        <li><a href="https://twitter.com/vcdkentstate" target="_blank" class="fa fa-twitter"></a></li>
-        <li><a href="https://www.instagram.com/vcdkentstate/" target="_blank" class="fa fa-instagram"></a></li>
+        <li><a href="https://www.facebook.com/VCD.BFA.Show/" target="_blank" class="fa fa-facebook"></a></li>
+        <li><a href="https://twitter.com/vcdbfashow" target="_blank" class="fa fa-twitter"></a></li>
+        <li><a href="https://www.instagram.com/vcdbfashow/" target="_blank" class="fa fa-instagram"></a></li>
       </ul>
       <a href="index.html"><img src="images/logos/export full logo.svg" alt="Export logo" class="footer-logo"></a>
     </div>
