update all social media links

--- a/Bios/Mapes.html
+++ b/Bios/Mapes.html
@@ -247,9 +247,9 @@
       <div>
   <!-- font awesome icons -->
         <ul class="footer-social-media">
-          <li><a href="https://www.facebook.com/VCDKent/" target="_blank" class="fa fa-facebook"></a></li>
-          <li><a href="https://twitter.com/vcdkentstate" target="_blank" class="fa fa-twitter"></a></li>
-          <li><a href="https://www.instagram.com/vcdkentstate/" target="_blank" class="fa fa-instagram"></a></li>
+          <li><a href="https://www.facebook.com/VCD.BFA.Show/" target="_blank" class="fa fa-facebook"></a></li>
+          <li><a href="https://twitter.com/vcdbfashow" target="_blank" class="fa fa-twitter"></a></li>
+          <li><a href="https://www.instagram.com/vcdbfashow/" target="_blank" class="fa fa-instagram"></a></li>
         </ul>
         <a href="../index.html"><img src="../images/logos/export full logo.svg" alt="Export logo" class="footer-logo"></a>
       </div>
