Kidd bio spelling fix

--- a/Bios/Kidd.html
+++ b/Bios/Kidd.html
@@ -102,7 +102,7 @@
               Selling hot dogs.</li><br>
 
               <li><b>What is your #1 pet peeve?</b><br>
-              WUnopened emails. You know who you are. </li><br>
+              Unopened emails. You know who you are. </li><br>
 
               <li><b>What song do you have completely memorized?</b><br>
               Anything off of my Monday Blues playlist.</li><br>
