Kidd bio spelling fix 2

--- a/Bios/Kidd.html
+++ b/Bios/Kidd.html
@@ -87,7 +87,7 @@
               Option–command–c. Keep those text boxes short and clean.</li><br>
 
               <li><b>Worst VCD moment:</b><br>
-              Dropping an E-XACO knife and it falling directly into my friends foot. </li><br>
+              Dropping an X-ACTO knife and it falling directly into my friends foot. </li><br>
 
               <li><b>Best VCD moment:</b><br>
               This! Graduating is by far the best.</li><br>
