Stanaitis bio spelling fix

--- a/Bios/Stanaitis.html
+++ b/Bios/Stanaitis.html
@@ -72,7 +72,7 @@
 
             <h1 class="no-top-padding">About Me</h1>
             <ul>
-              <li>I am all around art loving designer who comes from a background in fine arts. I love all things adventure and anything that lets me be creative. </li> <br>
+              <li>I am an all around art loving designer who comes from a background in fine arts. I love all things adventure and anything that lets me be creative. </li> <br>
 
               <li><b>Senior quote:</b><br>
               "No matter where you go, there you are." -Confucius</li> <br>
